[package]
name = "extension-lock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
ckb-jsonrpc-types = "0.105"
ckb-sdk = "2.3.1"
ckb-types = "0.105"
inventory = "0.3"
serde = { version = "1.0", features = ["derive"] }

common = { path = "../common" }
core-rpc-types = { path = "../core/rpc/types" }
core-storage = { path = "../core/storage" }
