[package]
name = "tests"
version = "0.1.0"
authors = ["Nervos Network"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-types = "0.101"
hex = "0.4"
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1.0"

[workspace]
members = ["."]
